k8s/inci-plat/templates/api-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
