k8s/inci-plat/templates/front-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: front-clusterip
spec:
  type: ClusterIP
  selector:
    labels:
      app: front
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
