k8s/inci-plat/templates/pg-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: pg-service
spec:
  type: ClusterIP
  selector:
    app: pg
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
