k8s/inci-plat/templates/redis-clusterip.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: redis-service
spec:
  Type: ClusterIP
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
